; ModuleID = '/home/carl/AnghaBench/linux/drivers/irqchip/extr_irq-gic-v3-its.c_its_irq_get_msi_base.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/irqchip/extr_irq-gic-v3-its.c_its_irq_get_msi_base.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.its_device = type { %struct.its_node* }
%struct.its_node = type { i64 }

@GITS_TRANSLATER = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.its_device*)* @its_irq_get_msi_base to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @its_irq_get_msi_base(%struct.its_device* %0) #0 {
  %2 = alloca %struct.its_device*, align 8
  %3 = alloca %struct.its_node*, align 8
  store %struct.its_device* %0, %struct.its_device** %2, align 8
  %4 = load %struct.its_device*, %struct.its_device** %2, align 8
  %5 = getelementptr inbounds %struct.its_device, %struct.its_device* %4, i32 0, i32 0
  %6 = load %struct.its_node*, %struct.its_node** %5, align 8
  store %struct.its_node* %6, %struct.its_node** %3, align 8
  %7 = load %struct.its_node*, %struct.its_node** %3, align 8
  %8 = getelementptr inbounds %struct.its_node, %struct.its_node* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = load i64, i64* @GITS_TRANSLATER, align 8
  %11 = add nsw i64 %9, %10
  ret i64 %11
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
